Downgrade to version 2.4.2

--- a/test/demo/tilesource-swap.html
+++ b/test/demo/tilesource-swap.html
@@ -32,18 +32,17 @@
                 type: 'legacy-image-pyramid',
                 levels: [
                     {
-                        url: 'https://openseadragon.github.io/example-images/duomo/duomo_files/8/0_0.jpg',
+                        url: 'http://openseadragon.github.io/example-images/duomo/duomo_files/8/0_0.jpg',
                         width: 218,
                         height: 160
                     }
-                ],
-                degrees: 30,
+                ]
             };
 
             var duomo = {
                 Image: {
                     xmlns: 'http://schemas.microsoft.com/deepzoom/2008',
-                    Url: 'https://openseadragon.github.io/example-images/duomo/duomo_files/',
+                    Url: 'http://openseadragon.github.io/example-images/duomo/duomo_files/',
                     Format: 'jpg',
                     Overlap: '2',
                     TileSize: '256',
@@ -60,14 +59,11 @@
                 tileSources: duomoStandin,
                 minZoomImageRatio: 0.1,
                 defaultZoomLevel: 0.1,
-                zoomPerClick: 1,
-                crossOriginPolicy: 'Anonymous'
+                zoomPerClick: 1
             });
 
-            let swapped = false;
             viewer.addHandler('canvas-click', function(event) {
-                if (event.quick && !swapped) {
-                    swapped = true;
+                if (event.quick) {
                     var standin = viewer.world.getItemAt(0);
                     var standinBounds = standin.getBounds();
                     viewer.viewport.fitBounds(standinBounds);
@@ -80,13 +76,16 @@
                         index: 0, // Add the new image below the stand-in.
                         success: function(event) {
                             var fullImage = event.item;
-                            // The changeover will look better if we wait for the first draw after the changeover.
+
+                            // The changeover will look better if we wait for the first tile to be drawn.
                             var tileDrawnHandler = function(event) {
-                                    viewer.removeHandler('update-viewport', tileDrawnHandler);
+                                if (event.tiledImage === fullImage) {
+                                    viewer.removeHandler('tile-drawn', tileDrawnHandler);
                                     viewer.world.removeItem(standin);
+                                }
                             };
 
-                            viewer.addHandler('update-viewport', tileDrawnHandler);
+                            viewer.addHandler('tile-drawn', tileDrawnHandler);
                         }
                     });
                 }
