--- a/test/demo/basic.html
+++ b/test/demo/basic.html
@@ -25,8 +25,9 @@
             id: "contentDiv",
             prefixUrl: "../../build/openseadragon/images/",
             tileSources: "../data/testpattern.dzi",
-            showNavigator: true,
+            showNavigator:true
         });
+
     </script>
 </body>
 </html>
